--- a/release/introduction_section_unstarted_.html
+++ b/release/introduction_section_unstarted_.html
@@ -48,8 +48,8 @@
 <p>Backbone.js and Underscore.js are the non-minified versions. This is for
 informational purposes, but also because the Rails 3.1 asset pipeline will
 compress and minify them.</p>
-<p>While Rails 3.1 defaults to CoffeeScript, we have decided to make all example
-code normal Javascript as we believe that will be the most understandable to
+<p>While Rails 3.1 defaults to CoffeeScript, we have decided to make all of the
+example code normal Javascript as we believe that will be the most understandable to
 the current readers.</p>
 </div>
 </div>
