--- a/release/ar01s07.html
+++ b/release/ar01s07.html
@@ -70,7 +70,7 @@ top is concerned with the User JSON representation.  It should at least delegate
 to User#as_json. Going further, the JSON presentation for consumption by
 Backbone.js should be completely extracted into the JSON API endpoint controller
 action, or even a separate presenter class.</p></div></div><div class="section" lang="en" xml:lang="en"><div class="titlepage"><div><div><h3 class="title"><a id="_filters_and_sorting"></a>Filters and sorting</h3></div></div></div><p>When using our Backbone models and collections, it’s often handy to filter the
-collections by resuable criteria, or sort them by several different criteria.</p><div class="section" lang="en" xml:lang="en"><div class="titlepage"><div><div><h4 class="title"><a id="_filters"></a>Filters</h4></div></div></div><p>To filter a <code class="literal">Backbone.Collection</code>, like with Rails named scopes, define
+collections by reusable criteria, or sort them by several different criteria.</p><div class="section" lang="en" xml:lang="en"><div class="titlepage"><div><div><h4 class="title"><a id="_filters"></a>Filters</h4></div></div></div><p>To filter a <code class="literal">Backbone.Collection</code>, like with Rails named scopes, define
 functions on your collections that filter by your criteria, using the <code class="literal">select</code>
 function from Underscore.js, and return new instances of the collection class. A
 first implementation might look like this:</p><pre class="programlisting">var Tasks = Backbone.Collection.extend({
