--- a/release/models_and_collections.html
+++ b/release/models_and_collections.html
@@ -142,7 +142,7 @@ action, or even a separate presenter class.</p>
 <div class="titlepage"><div><div><h3 class="title">
 <a id="_filters_and_sorting"></a>Filters and sorting</h3></div></div></div>
 <p>When using our Backbone models and collections, it’s often handy to filter the
-collections by resuable criteria, or sort them by several different criteria.</p>
+collections by reusable criteria, or sort them by several different criteria.</p>
 <div class="section" lang="en" xml:lang="en">
 <div class="titlepage"><div><div><h4 class="title">
 <a id="_filters"></a>Filters</h4></div></div></div>
