--- a/release/toc.html
+++ b/release/toc.html
@@ -31,9 +31,9 @@
 <a href="book.html#_automatically_using_the_rails_authentication_token"><b>Automatically using the Rails authentication token</b></a><br/>
 <h3><b>Chapter 6<br/>
 <a href="book.html#_routers_views_and_templates">Routers, Views, and Templates</a></b></h3><br/>
-<a href="book.html#_view_explanation_chapter_unstarted"><b>View explanation (chapter unstarted)</b></a><br/>
-<a href="book.html#_routers_chapter_unstarted"><b>Routers (chapter unstarted)</b></a><br/>
+<a href="book.html#_view_explanation"><b>View explanation</b></a><br/>
 <a href="book.html#_templating_strategy_chapter_unstarted"><b>Templating strategy (chapter unstarted)</b></a><br/>
+<a href="book.html#_routers"><b>Routers</b></a><br/>
 <a href="book.html#_view_helpers_chapter_unstarted"><b>View helpers (chapter unstarted)</b></a><br/>
 <a href="book.html#_form_helpers_chapter_unstarted"><b>Form helpers (chapter unstarted)</b></a><br/>
 <a href="book.html#_event_binding"><b>Event binding</b></a><br/>
