--- a/release/organization.html
+++ b/release/organization.html
@@ -41,7 +41,7 @@
 applications to isolate "domain logic" (the application logic for the user)
 from the user interface (input and presentation).</p>
 <div class="figure">
-<a id="idp4493552"></a><p class="title"><b>Figure 1. Model-view-controller concept</b></p>
+<a id="id446262"></a><p class="title"><b>Figure 1. Model-view-controller concept</b></p>
 <div class="figure-contents"><div class="mediaobject"><img src="image/MVCDiagram.png" alt="image/MVCDiagram.png"></div></div>
 </div>
 <br class="figure-break"><p>In the above diagram a solid line represents a direct association and a dashed
