Generate new release

--- a/release/introduction_section_unstarted_.html
+++ b/release/introduction_section_unstarted_.html
@@ -31,16 +31,16 @@
     <hr/>
 
     <div class="content">
-      <div class="section" lang="en" xml:lang="en">
+      <div class="section" lang="en">
 <div class="titlepage"><div><div><h2 class="title" style="clear: both">
 <a id="_introduction_section_unstarted"></a>Introduction (section unstarted)</h2></div></div></div>
-<div class="section" lang="en" xml:lang="en"><div class="titlepage"><div><div><h3 class="title">
+<div class="section" lang="en"><div class="titlepage"><div><div><h3 class="title">
 <a id="_why_use_backbone_js"></a>Why use Backbone.js</h3></div></div></div></div>
-<div class="section" lang="en" xml:lang="en"><div class="titlepage"><div><div><h3 class="title">
+<div class="section" lang="en"><div class="titlepage"><div><div><h3 class="title">
 <a id="_when_not_to_use_backbone_js"></a>When not to use Backbone.js</h3></div></div></div></div>
-<div class="section" lang="en" xml:lang="en"><div class="titlepage"><div><div><h3 class="title">
+<div class="section" lang="en"><div class="titlepage"><div><div><h3 class="title">
 <a id="_why_not_sproutcore_cappuccino_knockout_js_spine_etc"></a>Why not SproutCore, Cappuccino, Knockout.js, Spine, etc.</h3></div></div></div></div>
-<div class="section" lang="en" xml:lang="en">
+<div class="section" lang="en">
 <div class="titlepage"><div><div><h3 class="title">
 <a id="_the_example_application"></a>The Example Application</h3></div></div></div>
 <p>Rails 3.1.0.rc5</p>
