--- a/release/toc.html
+++ b/release/toc.html
@@ -32,7 +32,8 @@
 <h3><b>Chapter 6<br/>
 <a href="book.html#_routers_views_and_templates">Routers, Views, and Templates</a></b></h3><br/>
 <a href="book.html#_view_explanation"><b>View explanation</b></a><br/>
-<a href="book.html#_templating_strategy_chapter_unstarted"><b>Templating strategy (chapter unstarted)</b></a><br/>
+<a href="book.html#_templating_strategy"><b>Templating strategy</b></a><br/>
+<a href="book.html#_choosing_a_strategy"><b>Choosing a strategy</b></a><br/>
 <a href="book.html#_routers"><b>Routers</b></a><br/>
 <a href="book.html#_view_helpers_chapter_unstarted"><b>View helpers (chapter unstarted)</b></a><br/>
 <a href="book.html#_form_helpers_chapter_unstarted"><b>Form helpers (chapter unstarted)</b></a><br/>
@@ -41,7 +42,7 @@
 <a href="book.html#_swapping_router"><b>Swapping router</b></a><br/>
 <a href="book.html#_composite_views"><b>Composite views</b></a><br/>
 <a href="book.html#_how_to_use_multiple_views_on_the_same_model_collection_chapter_unstarted"><b>How to use multiple views on the same model/collection (chapter unstarted)</b></a><br/>
-<a href="book.html#_internationalization_chapter_unstarted"><b>Internationalization (chapter unstarted)</b></a><br/>
+<a href="book.html#_internationalization_stub"><b>Internationalization (stub)</b></a><br/>
 <h3><b>Chapter 7<br/>
 <a href="book.html#_models_and_collections">Models and collections</a></b></h3><br/>
 <a href="book.html#_naming_conventions_chapter_unstarted"><b>Naming conventions (chapter unstarted)</b></a><br/>
@@ -49,22 +50,6 @@
 <a href="book.html#_model_associations"><b>Model associations</b></a><br/>
 <a href="book.html#_filters_and_sorting"><b>Filters and sorting</b></a><br/>
 <a href="book.html#_client_server_duplicated_business_logic_chapter_unstarted"><b>Client/Server duplicated business logic (chapter unstarted)</b></a><br/>
-<a href="book.html#_validations_chapter_unstarted"><b>Validations (chapter unstarted)</b></a><br/>
-<a href="book.html#_synchronizing_between_clients_chapter_unstarted"><b>Synchronizing between clients (chapter unstarted)</b></a><br/>
-<h3><b>Chapter 8<br/>
-<a href="book.html#_testing_section_unstarted">Testing (section unstarted)</a></b></h3><br/>
-<a href="book.html#_full_stack_integration_testing"><b>Full-stack integration testing</b></a><br/>
-<a href="book.html#_isolated_unit_testing"><b>Isolated unit testing</b></a><br/>
-<h3><b>Chapter 9<br/>
-<a href="book.html#_the_javascript_language_section_unstarted">The JavaScript language (section unstarted)</a></b></h3><br/>
-<a href="book.html#_model_attribute_types_and_serialization"><b>Model attribute types and serialization</b></a><br/>
-<a href="book.html#_context_binding_js_tt_this_tt"><b>Context binding (JS <tt>this</tt>)</b></a><br/>
-<a href="book.html#_coffeescript_with_backbone_js"><b>CoffeeScript with Backbone.js</b></a><br/>
-<h3><b>Chapter 10<br/>
-<a href="book.html#_security_stub">Security (stub)</a></b></h3><br/>
-<a href="book.html#_xss_with_json_bootstrapping_stub"><b>XSS with JSON bootstrapping (stub)</b></a><br/>
-<a href="book.html#_xss_in_html_templates_stub"><b>XSS in HTML templates (stub)</b></a><br/>
-<h3><b>Chapter 11<br/>
-<a href="book.html#_performance_stub">Performance (stub)</a></b></h3><br/>
-<a href="book.html#_dependency_choice"><b>Dependency choice</b></a><br/>
+<a href="book.html#_validations"><b>Validations</b></a><br/>
+<a href="book.html#_synchronizing_between_clients"><b>Synchronizing between clients</b></a><br/>
 <h1 class="centered">* * *</h1></div></body></html>
