--- a/release/getting_up_to_speed_section_unstarted_.html
+++ b/release/getting_up_to_speed_section_unstarted_.html
@@ -31,13 +31,34 @@
     <hr/>
 
     <div class="content">
-      <div class="section" lang="en" xml:lang="en">
+      <div class="section" lang="en">
 <div class="titlepage"><div><div><h2 class="title" style="clear: both">
 <a id="_getting_up_to_speed_section_unstarted"></a>Getting up to speed (section unstarted)</h2></div></div></div>
-<div class="section" lang="en" xml:lang="en"><div class="titlepage"><div><div><h3 class="title">
-<a id="_backbone_js_online_resources"></a>Backbone.js online resources</h3></div></div></div></div>
-<div class="section" lang="en" xml:lang="en"><div class="titlepage"><div><div><h3 class="title">
-<a id="_javascript_online_resources_and_books"></a>JavaScript online resources and books</h3></div></div></div></div>
+<div class="section" lang="en">
+<div class="titlepage"><div><div><h3 class="title">
+<a id="_backbone_js_online_resources"></a>Backbone.js online resources</h3></div></div></div>
+<p>This book is not an introduction, and assumes you have some knowledge of
+Javascript and of Backbone.js.  Luckily, there is solid documentation available
+to get you up to speed on Backbone.</p>
+<p>The online documentation for Backbone is very readable:</p>
+<p><a class="ulink" href="http://documentcloud.github.com/backbone/" target="_top">http://documentcloud.github.com/backbone/</a></p>
+<p>The GitHub wiki for Backbone links to a large number of tutorials and examples:</p>
+<p><a class="ulink" href="https://github.com/documentcloud/backbone/wiki/Tutorials%2C-blog-posts-and-example-sites" target="_top">https://github.com/documentcloud/backbone/wiki/Tutorials%2C-blog-posts-and-example-sites</a></p>
+<p>PeepCode is producing a three-part series on getting up to speed on Backbone.js:</p>
+<p><a class="ulink" href="http://peepcode.com/products/backbone-js" target="_top">http://peepcode.com/products/backbone-js</a></p>
+</div>
+<div class="section" lang="en">
+<div class="titlepage"><div><div><h3 class="title">
+<a id="_javascript_online_resources_and_books"></a>JavaScript online resources and books</h3></div></div></div>
+<p>I cannot recommend <span class="emphasis"><em>JavaScript: The Good Parts</em></span> by Douglas Crockford highly
+enough.  It’s concise, readable, and will make you a better JavaScript programmer.</p>
+<p><a class="ulink" href="http://www.amazon.com/exec/obidos/ASIN/0596517742/" target="_top">http://www.amazon.com/exec/obidos/ASIN/0596517742/</a></p>
+<p><span class="emphasis"><em>Test-Driven JavaScript Development</em></span> by Christian Johansen teaches not only the
+ins and outs how to test-drive your code, but covers good fundamental
+JavaScript development practices and takes a deep dive on language
+fundamentals:</p>
+<p><a class="ulink" href="http://tddjs.com/" target="_top">http://tddjs.com/</a></p>
+</div>
 </div>
 
     </div>
