--- a/release/organization.html
+++ b/release/organization.html
@@ -31,17 +31,17 @@
     <hr/>
 
     <div class="content">
-      <div class="section" lang="en" xml:lang="en">
+      <div class="section" lang="en">
 <div class="titlepage"><div><div><h2 class="title" style="clear: both">
 <a id="_organization"></a>Organization</h2></div></div></div>
-<div class="section" lang="en" xml:lang="en">
+<div class="section" lang="en">
 <div class="titlepage"><div><div><h3 class="title">
 <a id="_backbone_js_and_mvc"></a>Backbone.js and MVC</h3></div></div></div>
 <p>Model–View–Controller (MVC) is an architectural pattern used in many
 applications to isolate "domain logic" (the application logic for the user)
 from the user interface (input and presentation).</p>
 <div class="figure">
-<a id="id446262"></a><p class="title"><b>Figure 1. Model-view-controller concept</b></p>
+<a id="d0e84"></a><p class="title"><b>Figure 1. Model-view-controller concept</b></p>
 <div class="figure-contents"><div class="mediaobject"><img src="image/MVCDiagram.png" alt="image/MVCDiagram.png"></div></div>
 </div>
 <br class="figure-break"><p>In the above diagram a solid line represents a direct association and a dashed
@@ -71,7 +71,7 @@ great organization that Backbone.js gives you is much better than what you had
 before. The fact that it doesn’t have a nice name, or strict adherence to a
 pattern, isn’t worth worrying about.</p>
 </div>
-<div class="section" lang="en" xml:lang="en">
+<div class="section" lang="en">
 <div class="titlepage"><div><div><h3 class="title">
 <a id="_what_goes_where"></a>What Goes Where</h3></div></div></div>
 <p>Part of the initial learning curve of Backbone.js can be figuring out what goes
@@ -173,7 +173,7 @@ desired result, and the type of user interface. This book should help you
 understand which interaction you’ll want to choose for each portion of your
 application.</p>
 </div>
-<div class="section" lang="en" xml:lang="en">
+<div class="section" lang="en">
 <div class="titlepage"><div><div><h3 class="title">
 <a id="_namespacing_your_application"></a>Namespacing your application</h3></div></div></div>
 <p>You will want to create an object in Javascript for your Backbone.js
@@ -200,7 +200,7 @@ This app variable will look like the following.</p>
 <p>You can find this file in the example app in
 <code class="literal">app/assets/javascripts/example_app.js</code>.</p>
 </div>
-<div class="section" lang="en" xml:lang="en">
+<div class="section" lang="en">
 <div class="titlepage"><div><div><h3 class="title">
 <a id="_mixins"></a>Mixins</h3></div></div></div>
 <p>Backbone provides a basic mechanism for inheritance.  Often you’ll want to build a collection of related, reusable behavior and include that in several classes that already inherit from a Backbone base class.  In these cases, you’ll want to use a <a class="ulink" href="http://en.wikipedia.org/wiki/Mixin" target="_top">mixin</a>.</p>
@@ -209,6 +209,7 @@ This app variable will look like the following.</p>
 <pre class="programlisting">var Observer = {
   bindTo: function(source, event, callback) {
     source.bind(event, callback, this);
+    this.bindings = this.bindings || [];
     this.bindings.push({ source: source, event: event, callback: callback });
   },
 
