--- a/release/title.html
+++ b/release/title.html
@@ -33,10 +33,10 @@
     <div class="content">
       <div class="titlepage">
 <div><div><h2 class="title">
-<a id="id446110"></a>Backbone.js on Rails</h2></div></div>
+<a id="d0e3"></a>Backbone.js on Rails</h2></div></div>
 <hr>
 </div>
-<div class="section" lang="en" xml:lang="en"><div class="titlepage"><div><div><h2 class="title" style="clear: both">
+<div class="section" lang="en"><div class="titlepage"><div><div><h2 class="title" style="clear: both">
 <a id="_preface_section_unstarted"></a>Preface (section unstarted)</h2></div></div></div></div>
     </div>
 
