Generate new release

--- a/release/book.html
+++ b/release/book.html
@@ -4059,7 +4059,7 @@ NOTE<span style="color: #990000">:</span> Read up on idempotent messages<span st
 
 Use <span style="color: #990000">+</span>json2<span style="color: #990000">.</span>js<span style="color: #990000">+</span> and<span style="color: #990000">:</span>
 
-<span style="color: #990000">[</span>js<span style="color: #990000">]</span>
+<span style="color: #990000">[</span>javascript<span style="color: #990000">]</span>
 source<span style="color: #990000">~~~~</span>
 <span style="color: #990000">&lt;</span>script type<span style="color: #990000">=</span><span style="color: #FF0000">"text/json"</span> id<span style="color: #990000">=</span><span style="color: #FF0000">"something"</span><span style="color: #990000">&gt;</span>
   <span style="color: #990000">&lt;%=</span> something<span style="color: #990000">.</span>to_json <span style="color: #990000">%&gt;</span>
@@ -4113,7 +4113,7 @@ jQuery<span style="color: #990000">-</span>compatible syntax<span style="color: 
 <div id="footnotes"><hr /></div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2011-09-16 16:33:29 EDT
+Last updated 2011-09-16 16:49:10 EDT
 </div>
 </div>
 </body>
