--- a/release/ar01s04.html
+++ b/release/ar01s04.html
@@ -92,38 +92,38 @@ didn’t namespace your Task model then this would conflict.</p><p>This variable
 and an init method which will be called to initialize the application. It’s
 very common to create a new Router in the init function, and
 Backbone.history.start() must be called in order to route the initial URL.
-This app variable will look like the following.</p><pre class="programlisting">var ExampleApp = {
+This app variable will look like the following.</p><pre class="programlisting"><b class="hl-keyword">var</b> ExampleApp = {
   Models: {},
   Collections: {},
   Views: {},
   Routers: {},
-  init: function() {
-    new ExampleApp.Routers.Tasks();
+  init: <b class="hl-keyword">function</b>() {
+    <b class="hl-keyword">new</b> ExampleApp.Routers.Tasks();
     Backbone.history.start();
   }
 };</pre><p>You can find this file in the example app in
-<code class="literal">app/assets/javascripts/example_app.js</code>.</p></div><div class="section" lang="en"><div class="titlepage"><div><div><h3 class="title"><a id="_mixins"/>Mixins</h3></div></div></div><p>Backbone provides a basic mechanism for inheritance.  Often you’ll want to build a collection of related, reusable behavior and include that in several classes that already inherit from a Backbone base class.  In these cases, you’ll want to use a <a class="ulink" href="http://en.wikipedia.org/wiki/Mixin" target="_top">mixin</a>.</p><p>Backbone includes <a class="ulink" href="http://documentcloud.github.com/backbone/#Events" target="_top">Backbone.Events</a> as an example of a mixin.</p><p>Here, we create a mixin named <code class="literal">Observer</code> that contains behavior for binding to events in a fashion that can be cleaned up later:</p><pre class="programlisting">var Observer = {
-  bindTo: function(source, event, callback) {
-    source.bind(event, callback, this);
-    this.bindings = this.bindings || [];
-    this.bindings.push({ source: source, event: event, callback: callback });
+<code class="literal">app/assets/javascripts/example_app.js</code>.</p></div><div class="section" lang="en"><div class="titlepage"><div><div><h3 class="title"><a id="_mixins"/>Mixins</h3></div></div></div><p>Backbone provides a basic mechanism for inheritance.  Often you’ll want to build a collection of related, reusable behavior and include that in several classes that already inherit from a Backbone base class.  In these cases, you’ll want to use a <a class="ulink" href="http://en.wikipedia.org/wiki/Mixin" target="_top">mixin</a>.</p><p>Backbone includes <a class="ulink" href="http://documentcloud.github.com/backbone/#Events" target="_top">Backbone.Events</a> as an example of a mixin.</p><p>Here, we create a mixin named <code class="literal">Observer</code> that contains behavior for binding to events in a fashion that can be cleaned up later:</p><pre class="programlisting"><b class="hl-keyword">var</b> Observer = {
+  bindTo: <b class="hl-keyword">function</b>(source, event, callback) {
+    source.bind(event, callback, <b class="hl-keyword">this</b>);
+    <b class="hl-keyword">this</b>.bindings = <b class="hl-keyword">this</b>.bindings || [];
+    <b class="hl-keyword">this</b>.bindings.push({ source: source, event: event, callback: callback });
   },
 
-  unbindFromAll: function() {
-    _.each(this.bindings, function(binding) {
+  unbindFromAll: <b class="hl-keyword">function</b>() {
+    _.each(<b class="hl-keyword">this</b>.bindings, <b class="hl-keyword">function</b>(binding) {
       binding.source.unbind(binding.event, binding.callback);
     });
-    this.bindings = [];
+    <b class="hl-keyword">this</b>.bindings = [];
   }
 };</pre><p>We can mix <code class="literal">Observer</code> into a class by using Underscore’s <code class="literal">_.extend</code> on the prototype of that class:</p><pre class="programlisting">SomeCollectionView = Backbone.Collection.extend({
-  initialize: function() {
-    this.bindTo(this.collection, "change", this.render);
+  initialize: <b class="hl-keyword">function</b>() {
+    <b class="hl-keyword">this</b>.bindTo(<b class="hl-keyword">this</b>.collection, <b class="hl-string"><i style="color:red">"change"</i></b>, <b class="hl-keyword">this</b>.render);
   },
 
-  leave: function() {
-    this.unbindFromAll(); // calling a method defined in the mixin
-    this.remove();
+  leave: <b class="hl-keyword">function</b>() {
+    <b class="hl-keyword">this</b>.unbindFromAll(); <i class="hl-comment" style="color: silver">// calling a method defined in the mixin</i>
+    <b class="hl-keyword">this</b>.remove();
   }
 });
 
-_.extend(SomeCollectionView.prototype, Observer);</pre></div></div><div class="navfooter"><hr/><table width="100%" summary="Navigation footer"><tr><td width="40%" align="left"><a accesskey="p" href="ar01s03.html">Prev</a> </td><td width="20%" align="center"> </td><td width="40%" align="right"> <a accesskey="n" href="ar01s05.html">Next</a></td></tr><tr><td width="40%" align="left" valign="top">Introduction (section unstarted) </td><td width="20%" align="center"><a accesskey="h" href="index.html">Home</a></td><td width="40%" align="right" valign="top"> Rails Integration</td></tr></table></div></body></html>
+_.extend(SomeCollectionView.<b class="hl-keyword">prototype</b>, Observer);</pre></div></div><div class="navfooter"><hr/><table width="100%" summary="Navigation footer"><tr><td width="40%" align="left"><a accesskey="p" href="ar01s03.html">Prev</a> </td><td width="20%" align="center"> </td><td width="40%" align="right"> <a accesskey="n" href="ar01s05.html">Next</a></td></tr><tr><td width="40%" align="left" valign="top">Introduction (section unstarted) </td><td width="20%" align="center"><a accesskey="h" href="index.html">Home</a></td><td width="40%" align="right" valign="top"> Rails Integration</td></tr></table></div></body></html>
