--- a/release/organization.html
+++ b/release/organization.html
@@ -42,7 +42,7 @@ applications to isolate "domain logic" (the application logic for the user)
 from the user interface (input and presentation).</p>
 <div class="figure">
 <a id="d0e84"></a><p class="title"><b>Figure 1. Model-view-controller concept</b></p>
-<div class="figure-contents"><div class="mediaobject"><img src="image/MVCDiagram.png" alt="image/MVCDiagram.png"></div></div>
+<div class="figure-contents"><div class="mediaobject" align="center"><table border="0" summary="manufactured viewport for HTML img" cellspacing="0" cellpadding="0" width="65%"><tr><td align="center"><img src="image/MVCDiagram.png" align="middle" width="100%" alt="image/MVCDiagram.png"></td></tr></table></div></div>
 </div>
 <br class="figure-break"><p>In the above diagram a solid line represents a direct association and a dashed
 line represents an indirect association (for example, via an observer).</p>
