--- a/release/rails_integration.html
+++ b/release/rails_integration.html
@@ -862,7 +862,7 @@ Backbone.js Ajax requests are no exception.</p>
 recommended), or make Backbone.js play nicely with Rails XSS.</p>
 <p>To make Backbone.js play nicely with Rails XSS you can monkeypatch Backbone.js
 to include the Rails XSS token in any requests it makes.</p>
-<p>The following is one such script.</p>
+<p>The following is one such script:</p>
 <pre class="programlisting"><i class="hl-comment" style="color: silver">//</i>
 <i class="hl-comment" style="color: silver">// With additions by Maciej Adwent http://github.com/Maciek416</i>
 <i class="hl-comment" style="color: silver">// If token name and value are not supplied, this code Requires jQuery</i>
