--- a/release/routers_views_and_templates.html
+++ b/release/routers_views_and_templates.html
@@ -456,12 +456,12 @@ and how to do it.</p>
 that need to be done:</p>
 <div class="figure">
 <a id="d0e1386"></a><p class="title"><b>Figure 2. Tasks index view</b></p>
-<div class="figure-contents"><div class="mediaobject"><img src="views_and_templates/tasks-index.png" alt="views_and_templates/tasks-index.png"></div></div>
+<div class="figure-contents"><div class="mediaobject" align="center"><table border="0" summary="manufactured viewport for HTML img" cellspacing="0" cellpadding="0" width="65%"><tr><td align="center"><img src="views_and_templates/tasks-index.png" align="middle" width="100%" alt="views_and_templates/tasks-index.png"></td></tr></table></div></div>
 </div>
 <br class="figure-break"><p>and a detail view that shows detail on one task:</p>
 <div class="figure">
 <a id="d0e1397"></a><p class="title"><b>Figure 3. Tasks detail view</b></p>
-<div class="figure-contents"><div class="mediaobject"><img src="views_and_templates/tasks-detail.png" alt="views_and_templates/tasks-detail.png"></div></div>
+<div class="figure-contents"><div class="mediaobject" align="center"><table border="0" summary="manufactured viewport for HTML img" cellspacing="0" cellpadding="0" width="65%"><tr><td align="center"><img src="views_and_templates/tasks-detail.png" align="middle" width="100%" alt="views_and_templates/tasks-detail.png"></td></tr></table></div></div>
 </div>
 <br class="figure-break"><p>The interface switches between the two views.</p>
 <p>Here’s the source for the aggregate index view:</p>
@@ -756,7 +756,7 @@ in Backbone, you’re making <span class="strong"><strong>another</strong></span
 <code class="literal">TasksRouter</code> would then look like:</p>
 <div class="figure">
 <a id="d0e1747"></a><p class="title"><b>Figure 4. Router class inheritance</b></p>
-<div class="figure-contents"><div class="mediaobject"><img src="views_and_templates/router-diagram.png" alt="views_and_templates/router-diagram.png"></div></div>
+<div class="figure-contents"><div class="mediaobject" align="center"><img src="views_and_templates/router-diagram.png" align="middle" height="200" alt="views_and_templates/router-diagram.png"></div></div>
 </div>
 <br class="figure-break"><p>Phew! Hopefully this adventure into Backbone and JavaScript internals has
 taught you that although it’s more code, it’s hopefully going to save time down
