--- a/release/toc.html
+++ b/release/toc.html
@@ -52,4 +52,20 @@
 <a href="book.html#_client_server_duplicated_business_logic_chapter_unstarted"><b>Client/Server duplicated business logic (chapter unstarted)</b></a><br/>
 <a href="book.html#_validations"><b>Validations</b></a><br/>
 <a href="book.html#_synchronizing_between_clients"><b>Synchronizing between clients</b></a><br/>
+<h3><b>Chapter 8<br/>
+<a href="book.html#_testing_section_unstarted">Testing (section unstarted)</a></b></h3><br/>
+<a href="book.html#_full_stack_integration_testing"><b>Full-stack integration testing</b></a><br/>
+<a href="book.html#_isolated_unit_testing"><b>Isolated unit testing</b></a><br/>
+<h3><b>Chapter 9<br/>
+<a href="book.html#_the_javascript_language_section_unstarted">The JavaScript language (section unstarted)</a></b></h3><br/>
+<a href="book.html#_model_attribute_types_and_serialization"><b>Model attribute types and serialization</b></a><br/>
+<a href="book.html#_context_binding_js_tt_this_tt"><b>Context binding (JS <tt>this</tt>)</b></a><br/>
+<a href="book.html#_coffeescript_with_backbone_js"><b>CoffeeScript with Backbone.js</b></a><br/>
+<h3><b>Chapter 10<br/>
+<a href="book.html#_security_stub">Security (stub)</a></b></h3><br/>
+<a href="book.html#_xss_with_json_bootstrapping_stub"><b>XSS with JSON bootstrapping (stub)</b></a><br/>
+<a href="book.html#_xss_in_html_templates_stub"><b>XSS in HTML templates (stub)</b></a><br/>
+<h3><b>Chapter 11<br/>
+<a href="book.html#_performance_stub">Performance (stub)</a></b></h3><br/>
+<a href="book.html#_dependency_choice"><b>Dependency choice</b></a><br/>
 <h1 class="centered">* * *</h1></div></body></html>
